ga-alb-waf/cfn-template-with-ga.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Creates VPC, ALB, Global Accelerator, WAFv2'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1b

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: VPCGatewayAttachment
    Properties:
      Name: PublicALB
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup

  ALBListener80:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: "200 OK"
            StatusCode: '200'

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS traffic to ALB
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  WAF:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: SecurityWAF
      Scope: REGIONAL
      DefaultAction:
        Allow: {}
      VisibilityConfig:
        SampledRequestsEnabled: false
        CloudWatchMetricsEnabled: false
        MetricName: ExampleWebACLMetric
      Rules:
        - Name: BlockBadRequests
          Priority: 0
          Action:
            Block: {}
          VisibilityConfig:
            SampledRequestsEnabled: false
            CloudWatchMetricsEnabled: false
            MetricName: BlockBadRequestMatchMetric
          Statement:
            ByteMatchStatement:
              FieldToMatch:
                Headers:
                  MatchPattern:
                    IncludedHeaders:
                      - "User-Agent"
                      - "Referer"
                  MatchScope: VALUE
                  OversizeHandling: MATCH
              PositionalConstraint: CONTAINS
              SearchString: BadBot
              TextTransformations:
                - Type: NONE
                  Priority: 0

  # ALBtoWAFAssociation:
  #   Type: AWS::WAFv2::WebACLAssociation
  #   Properties:
  #     ResourceArn: !GetAtt ALB.LoadBalancerArn
  #     WebACLId: !Ref WAF

#   ALB listener cloudformation template code snippet to return a fixed 200 response

  GlobalAccelerator:
    Type: AWS::GlobalAccelerator::Accelerator
    Properties:
      Name: PublicGlobalAccelerator
      Enabled: true

  GlobalAcceleratorListener:
    Type: AWS::GlobalAccelerator::Listener
    Properties:
      AcceleratorArn: !Ref GlobalAccelerator
      PortRanges:
        - FromPort: 80
          ToPort: 80
      Protocol: TCP
      ClientAffinity: NONE

  # EndpointGroup:
  #   Type: AWS::GlobalAccelerator::EndpointGroup
  #   Properties:
  #     EndpointGroupRegion: us-east-1
  #     EndpointConfigurations:
  #       - EndpointId: !GetAtt ALB.LoadBalancerFullName
  #         Weight: 100
  #     ListenerArn: !Ref GlobalAcceleratorListener

Outputs:
  WAFId:
    Description: WAF ID
    Value: !GetAtt WAF.Id
  WAFArn:
    Description: WAF ARN
    Value: !GetAtt WAF.Arn
  ALBDns:
    Description: The DNS name for the load balancer
    Value: !GetAtt ALB.DNSName
  ALBArn:
    Description: ARN of the load balancer
    Value: !Ref ALB
  GlobalAccelerator:
    Description: Instance Id of the launched instance
    Value: !GetAtt GlobalAccelerator.DnsName
  GlobalAcceleratorListenerArn:
    Description: Global Accelerator Listener Arn
    Value: !GetAtt GlobalAcceleratorListener.ListenerArn
  VPCId:
    Description: VPC Id of the VPC in which instance is launched
    Value: !Ref VPC
